[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A test project to learn how git, Makefile, Poetry and Flake8 work"
authors = ["ghost-of-karelia <mitrijpavlov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Topic :: Games/Entertainment"
]
repository = "https://github.com/ghost-of-karelia/python-project-lvl"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"